--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'American drama -- 20th century'
+- GITenberg
 title: 'Her Own Way
 
   A Play in Four Acts'
